syntax ="proto3";
option java_package = "emsi.moncef.stub";
service Salutation{
  rpc login(stream NomRequest) returns (NomResponse);
}

service Multiplication{
  rpc getTableMultiplication(NombreRequest) returns (stream TableResponse);
}

service Suffle{
  rpc ShuffleWords(stream NamesRequest) returns (stream NamesResponse);
}
message NamesRequest{
  string nom=1;
}
message NamesResponse{
  string msgResponse=1;
}
message NomRequest{
  string nom=1;
}
message NomResponse{
  string msgResponse=1;
}

message NombreRequest{
  int32 nombre=1;
  int32 limite=2;
}

message TableResponse{
  string Resultat=1;
}